--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
+    "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.6",
@@ -26,6 +27,8 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-facebook": "^2.4.0",
+    "od-virtualscroll": "^0.2.4",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
