--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-tree-component": "^3.7.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ngx-facebook": "^2.4.0",
