--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular-tree-component": "^3.7.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ngx-facebook": "^2.4.0",
     "od-virtualscroll": "^0.2.4",
     "rxjs": "^5.1.0",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
